[tool.poetry]
name = "doctran"
version = "0.0.14"
description = "Document transformation framework for vector based retrieval"
authors = ["Jason Fan <jason.wc.fan@gmail.com>", "Ayan Bandyopadhyay <ayanb9440@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
pydantic = "^2.6.4"
lxml = "^5.2.1"
openai = "^1.9.0"
presidio-analyzer = "^2.2.33"
presidio-anonymizer = "^2.2.33"
spacy = "^3.5.4"
tiktoken = "^0.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.3"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
